--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="title_activity_display_message">DisplayMessageActivity</string>
 
     <string name="hello_world">Hello world!</string>
+    <string name="title_activity_stream_info">StreamInfo</string>
 </resources>
